Bug #276: "Home 'My Profile Sign out" buttons not visible in the menu-bar at the top

--- a/public/rsrcs/css/social.css
+++ b/public/rsrcs/css/social.css
@@ -8,6 +8,7 @@ body {
     font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
     color: #333;
     font-size: 11px;
+    min-width: 980px;
 }
 textarea, input {
     font-family: sans-serif;
